'fixed' slider & added proper outer gaps supp
Former-commit-id: 438bf89caee2a6462c6912b904b68a059563f6ec

--- a/ags/widgets/dock/dock.scss
+++ b/ags/widgets/dock/dock.scss
@@ -1,11 +1,11 @@
 .dock {
     @include widget;
     min-height: 50px;
-    min-width: 550px;
+    min-width: 540px + $outer_gap;
     padding-right: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-bottom: $outer_gap;
+    margin-bottom: $outer_gap - 6px;
     background-color: $background-t;
     color: $on_background;
 }
